This branch is only for testing and should not be merged

--- a/component/pom.xml
+++ b/component/pom.xml
@@ -54,7 +54,8 @@
         <dependency>
             <groupId>com.github.cablelabs</groupId>
             <artifactId>siddhi-io-udp</artifactId>
-            <version>master-SNAPSHOT</version>
+<!--            <version>master-SNAPSHOT</version>-->
+            <version>start-udp-server-ipv4-and-6-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
