--- a/component/pom.xml
+++ b/component/pom.xml
@@ -52,16 +52,34 @@
             <type>bundle</type>
         </dependency>
         <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.42.Final</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <!-- The following dependencies are being used for testing -->
+        <dependency>
             <groupId>com.github.cablelabs</groupId>
             <artifactId>siddhi-io-udp</artifactId>
             <version>master-SNAPSHOT</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.siddhi.extension.io.kafka</groupId>
-            <artifactId>siddhi-io-kafka</artifactId>
-            <version>5.0.7</version>
-            <type>bundle</type>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -80,7 +98,16 @@
             <groupId>io.siddhi.extension.io.http</groupId>
             <artifactId>siddhi-io-http</artifactId>
             <version>2.2.0</version>
-            <scope>compile</scope>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- The following dependencies are being used for testing for real for TPS CI using the mvn:java target -->
+        <dependency>
+            <groupId>io.siddhi.extension.io.kafka</groupId>
+            <artifactId>siddhi-io-kafka</artifactId>
+            <version>5.0.7</version>
+            <type>bundle</type>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
@@ -88,6 +115,7 @@
             <version>2.8.0</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -131,6 +159,16 @@
         <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
+        </repository>
+        <repository>
+            <id>mvnrepository</id>
+            <url>http://repo1.maven.org/maven2</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
         </repository>
     </repositories>
 
